--- a/index2.html
+++ b/index2.html
@@ -481,8 +481,18 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
                     </div>
                 </div>
             </div>
+	<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/"
+target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13149907/0/10e17f74/1/"
+alt="Web Analytics Made Easy - Statcounter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </body>
 </html>
+
 
 
 
