--- a/index2.html
+++ b/index2.html
@@ -481,6 +481,11 @@ Todos los derechos reservados | Este sitio está hecho por <a target="_blank">En
                     </div>
                 </div>
             </div>
+	<script type="text/javascript">
+var sc_project=13149907; 
+var sc_invisible=1; 
+var sc_security="10e17f74"; 
+</script>
 	<script type="text/javascript"
 src="https://www.statcounter.com/counter/counter.js"
 async></script>
@@ -492,6 +497,7 @@ alt="Web Analytics Made Easy - Statcounter"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 </body>
 </html>
+
 
 
 
